prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guu-band
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guu-band
  template:
    metadata:
      labels:
        app: guu-band
    spec:
      containers:
        - name: guu-band
          image: polfor/guu_band:f7e6721
          ports:
            - containerPort: 80
