prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: guu-band
  namespace: prod
spec:
  selector:
    app: guu-band
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
